fix: related videos title layout issue

--- a/packages/ui-react/src/components/Filter/Filter.module.scss
+++ b/packages/ui-react/src/components/Filter/Filter.module.scss
@@ -14,6 +14,11 @@
 
 .dropDown {
   margin-bottom: 0;
+
+  label {
+    // hide the label and optional label
+    display: none;
+  }
 }
 
 .filterDropDown {
